feat: add refresh token docs
